Bug 165170 - Conjunctions are not calculated in Japanese locale
Summary: Conjunctions are not calculated in Japanese locale
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kstars
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-28 04:26 UTC by Yukiko Bando
Modified: 2008-06-30 16:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yukiko Bando 2008-06-28 04:26:35 UTC
Version:            (using KDE 4.0.83)
Installed from:    Mandriva RPMs
OS:                Linux

Clicking the Calculate button in the conjunctions calculator returns no results in Japanese locale. It seems that the localized names of solar system bodies are not recognized. If started from Konsole, I get these error messages.  

kstars(6434): Could not get data for ' "金星" '
kstars(6434): Could not get data for ' "水星" '
Comment 1 kstars 2008-06-29 19:01:20 UTC
SVN commit 825981 by harris:

kludgy-but-should-work fix for Bug #165170 (Cunjunctions not calculated for 
Japanese locale.

Thank you for reporting this localization bug...please report any other problems 
related to localization that you may run into!  I did see your second report as 
well, and I will get a fix ASAP.

The problem is that ComboBox->currentText() is translated, but the KSPlanet ctor 
expects the untranslated name string as a parameter.

This solution uses currentIndex() instead, and a switch to determine which planet 
should be used.  The solution is a bit fragile, because the planets are now 
assumed to appear in a particular order in the combobox. 

I am planning to implement a better solution in the unfrozen branch, so please 
don't port these changes to unfrozen or summer; wait for the unfrozen fix.

CCMAIL: kstars-devel@kde.org
BUG: 165170



 M  +43 -19    conjunctions.cpp  
 M  +3 -7      conjunctions.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=825981
Comment 2 kstars 2008-06-30 16:44:47 UTC
SVN commit 826351 by harris:

Better fix for bug #165170.  Now the order of items in the planet comboboxes is 
hard-coded in conjunctions.cpp, using a new PLANET enum I added to KSPlanetBase.  
So it's not possible for the order to be wrong.

I also added a convenience function 'static KSPlanetBase* 
KSPlanetBase::createPlanet(int)', so you can simply call: 
KSPlanetBase::createPlanet(VENUS), rather than using the KSPlanet ctor, and using 
the planet's name to determine which planet gets created.  There is also a new 
KSPlanet(int) ctor that does essentially the same thing.

Note: this commit won't be merged into trunk until after 4.1 is released.

CCMAIL: kstars-devel@kde.org
CCBUG: 165170



 M  +31 -1     ksplanet.cpp  
 M  +33 -26    ksplanet.h   [POSSIBLY UNSAFE: system]
 M  +40 -6     ksplanetbase.cpp  
 M  +11 -6     ksplanetbase.h  
 M  +21 -19    tools/conjunctions.cpp  
 M  +2 -7      tools/conjunctions.h  
 M  +0 -100    tools/conjunctions.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=826351